--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.1",
+    "cheerio": "^1.0.0-rc.12",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
-    "react-modal": "^3.15.1"
+    "react-modal": "^3.15.1",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
